--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -1,18 +1,19 @@
 *, *::before, *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body { 
-	padding: 0;
+    padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-/*Main navigation*/
 .nav-container {
     width: 100%;
     margin: 0;
     padding: 2rem;
     background-color: #FFFFFF;
+    color: #3B816F;
+    font-size: 1.2rem;
     position: sticky;
     top: 0;
     left: 0;
@@ -34,12 +35,8 @@ nav {
     justify-content: space-evenly;
 }
 
-.menu-item {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-}
-
-i {
-    color: #3B816F
+.menu-item:hover {
+    color: #A16812;
 }
 
 a {
@@ -47,7 +44,6 @@ a {
     text-decoration: none;
 }
 
-/*Portfolio flex container*/
 h1 {
     width: 75%;
     margin-top: 1.5rem;
@@ -66,6 +62,7 @@ h2 {
 h3 {
     margin: 0;
     font-size: 1.5rem;
+    font-weight: bold;
     display: flex;
 }
 
@@ -76,9 +73,8 @@ p {
 
 .portfolio {
     margin-top: 1.5rem;
-    margin-bottom: 5.5rem;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    color: #307865; /*#539382;*/
+    margin-bottom: 8rem;
+    color: #307865;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,8 +92,11 @@ p {
     gap: 2rem;
 }
 
+.project-card {
+    border-bottom: 0.2rem solid #EAA743;
+}
+
 article {
-    background-color: #F0F5F3; /*#C9F8EB;*/
     padding: 2rem;
     display: flex;
     flex-direction: row;
@@ -108,10 +107,15 @@ article {
 
 .project-links {
     color: #539382;
+    font-size: 1.5rem;
     padding-right: 2rem;
     display: flex;
     flex-direction: row;
     gap: 2rem;
+}
+
+.project-link:hover {
+    color: #A16812;
 }
 
 .project-description {
@@ -120,11 +124,10 @@ article {
     font-size: 1.2rem;
 }
 
-/*Footer*/
 footer {
     width: 100%;
     margin: 0;
-    padding: 0.5rem 2rem 0.5rem;
+    padding: 1.5rem 2rem 1.5rem;
     background-color: #EAA743;
     position: fixed;
     bottom: 0;
@@ -135,9 +138,16 @@ footer {
 }
 
 .footer {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    font-size: 0.5rem;
-    color: #FFFFFF;
+    font-size: 1rem;
+    color: #244C46;
+}
+
+.media-links {
+    color: #244C46;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
 }
 
 .media-links {
@@ -147,7 +157,6 @@ footer {
     gap: 2rem;
 }
 
-/*Media queries*/
 @media only screen and (min-width: 1000px) {
     .project-list {
         flex-direction: row;
