--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -1,18 +1,19 @@
 *, *::before, *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body { 
-	padding: 0;
+    padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-/*Main navigation*/
 .nav-container {
     width: 100%;
     margin: 0;
     padding: 2rem;
     background-color: #FFFFFF;
+    color: #3B816F;
+    font-size: 1.2rem;
     position: sticky;
     top: 0;
     left: 0;
@@ -34,12 +35,8 @@ nav {
     justify-content: space-evenly;
 }
 
-.menu-item {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-}
-
-i {
-    color: #3B816F
+.menu-item:hover {
+    color: #A16812;
 }
 
 a {
@@ -47,11 +44,9 @@ a {
     text-decoration: none;
 }
 
-/*About me flex container*/
 .about-me {
     margin-top: 1.5rem;
     margin-bottom: 3.5rem;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
     color: #3B816F;
     display: flex;
     flex-direction: column;
@@ -72,17 +67,15 @@ img {
 
 #blurb {
     width: 70%;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
     font-size: 1.5rem;
     text-align: center;
     color: #3B816F;
 }
 
-/*Footer*/
 footer {
     width: 100%;
     margin: 0;
-    padding: 0.5rem 2rem 0.5rem;
+    padding: 1.5rem 2rem 1.5rem;
     background-color: #EAA743;
     position: fixed;
     bottom: 0;
@@ -93,27 +86,26 @@ footer {
 }
 
 .footer {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    font-size: 0.5rem;
-    color: #FFFFFF;
+    font-size: 1rem;
+    color: #244C46;
 }
 
 .media-links {
-    color: #3B816F;
+    color: #244C46;
+    font-size: 2rem;
     display: flex;
     flex-direction: row;
     gap: 2rem;
 }
 
-/*Media queries*/
 @media only screen and (min-width: 1000px) {
     .about-me {
         width: 80%;
-        margin: 7rem auto;
+        margin: 5rem auto 7rem;
         display: grid;
         grid-template-rows: 2fr 6fr;
         grid-template-columns: 2fr 3fr;
-        gap: 0;
+        gap: 1.5rem;
     }
     h1{
         margin: 0;
@@ -136,4 +128,3 @@ footer {
         text-align: left;
     }
 }
-
