--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -45,13 +45,13 @@ a {
 }
 
 .about-me {
-    margin-top: 1.5rem;
+    margin-top: 0;
     margin-bottom: 3.5rem;
     color: #3B816F;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 h1 {
@@ -75,7 +75,7 @@ img {
 footer {
     width: 100%;
     margin: 0;
-    padding: 1.5rem 2rem 1.5rem;
+    padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
     position: fixed;
     bottom: 0;
