--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ a {
 
 .logo {
     width: 90%;
-    margin: 7rem 0 5rem;
+    margin: 5rem 0 5rem;
 }
 
 .fade-in-image {
@@ -97,7 +97,7 @@ h1 {
 footer {
     width: 100%;
     margin: 0;
-    padding: 1.5rem 2rem 1.5rem;
+    padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
     position: fixed;
     bottom: 0;
@@ -121,6 +121,23 @@ footer {
 }
 
 @media only screen and (min-width: 1000px) {
+    .logo {
+        width: 45%;
+        margin: 0;
+    }
+    .logo-name-cv {
+        width: 90%;
+        margin: 2rem auto;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .name-cv {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 750px) {
     .logo {
         width: 45%;
         margin: 0;
