--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -107,6 +107,9 @@ footer {
         width: 80%;
         margin: 1.5rem auto;
         flex-direction: row;
-        gap: 3rem;
+        gap: 4rem;
+    }
+    .logo {
+        margin-top: 0;
     }
 }
