--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -64,6 +64,7 @@ h1 {
     width: 75%;
     margin: 0;
     font-size: 1.5rem;
+    
 }
 
 img {
@@ -111,5 +112,18 @@ footer {
     }
     .logo {
         margin-top: 0;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .contact-container {
+        width: 90%;
+        padding-left: 4rem;
+        margin: 0 auto;
+        flex-direction: row;
+        gap: 4rem;
+    }
+    .contact-info {
+        padding-bottom: 3rem;
     }
 }
