--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -5,6 +5,9 @@
 body { 
     padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
 }
 
 .nav-container {
@@ -52,6 +55,7 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    flex: 1;
 }
 
 h1 {
@@ -77,7 +81,7 @@ footer {
     margin: 0;
     padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
-    position: fixed;
+    position: relative;
     bottom: 0;
     display: flex;
     flex-direction: row;
@@ -101,7 +105,7 @@ footer {
 @media only screen and (min-width: 1000px) {
     .about-me {
         width: 80%;
-        margin: 5rem auto 7rem;
+        margin: 6.5rem auto 8.5rem;
         display: grid;
         grid-template-rows: 2fr 6fr;
         grid-template-columns: 2fr 3fr;
