--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -5,6 +5,9 @@
 body { 
     padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
 }
 
 .nav-container {
@@ -51,6 +54,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
 h1 {
@@ -82,8 +86,6 @@ footer {
     margin: 0;
     padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
-    position: fixed;
-    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
