--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -5,6 +5,9 @@
 body { 
     padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
 }
 
 .nav-container {
@@ -79,6 +82,7 @@ p {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    flex: 1;
 }
 
 .project-list {
@@ -129,8 +133,6 @@ footer {
     margin: 0;
     padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
-    position: fixed;
-    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
