--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
 body { 
     padding: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
 }
 
 img {
@@ -72,6 +75,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     gap: 1.5rem;
+    flex: 1;
 }
 
 .name-cv {
@@ -99,7 +103,6 @@ footer {
     margin: 0;
     padding: 0.5rem 2rem 0.5rem;
     background-color: #EAA743;
-    position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: row;
@@ -144,7 +147,7 @@ footer {
     }
     .logo-name-cv {
         width: 90%;
-        margin: 2rem auto;
+        margin: 4rem auto 5rem;
         justify-content: space-evenly;
         align-items: center;
     }
