--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -105,6 +105,13 @@ footer {
     gap: 2rem;
 }
 
+.media-links {
+    color: #539382;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
 @media only screen and (min-width: 1000px) {
     .contact-container {
         width: 80%;
