footer icon color correct

--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -162,7 +162,7 @@ footer {
 }
 
 .media-links {
-    color: #539382;
+    color: #244C46;
     display: flex;
     flex-direction: row;
     gap: 2rem;
