--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -106,7 +106,7 @@ footer {
 }
 
 .media-links {
-    color: #539382;
+    color: #244C46;
     display: flex;
     flex-direction: row;
     gap: 2rem;
