--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -103,7 +103,7 @@ p {
 article {
     padding: 1.5rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 2rem;
@@ -119,11 +119,13 @@ img {
 }
 
 .project-links {
+    width: 100%;
     color: #539382;
-    font-size: 1.2rem;
-    padding-right: 0.8rem;
+    font-size: 2rem;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-self: center;
     gap: 2rem;
 }
 
