moved css to scss files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,158 +1,640 @@
-*, *::before, *::after {
-    box-sizing: border-box;
+.about-me {
+  margin-top: 0;
+  margin-bottom: 3.5rem;
+  color: #3B816F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  flex: 1;
 }
-
-body { 
-    padding: 0;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    display: flex; 
-    flex-direction: column; 
-    min-height: 100vh;
+.about-me h1 {
+  font-size: 2rem;
+  text-align: center;
 }
-
-img {
-    width: 100%;
-    height: auto;
+.about-me img#profile-photo {
+  width: 45%;
+  height: auto;
+  border-radius: 50%;
 }
-
-.nav-container {
-    width: 100%;
-    margin: 0;
-    padding: 2rem;
-    background-color: #FFFFFF;
-    color: #3B816F;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav {
-    width: 100%;
-}
-
-.menu-buttons {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.menu-item:hover {
-    color: #A16812;
-}
-
-a {
-    color: #3B816F;
-    text-decoration: none;
-}
-
-.logo {
-    width: 90%;
-    margin: 5rem 0 5rem;
-}
-
-.fade-in-image {
-    animation: fadeIn 11s;
-    transition-timing-function: cubic-bezier(0.42, 0, 1.0, 1.0);
-}
-
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-.logo-name-cv {
-    margin: 1.5rem 0 5rem;
-    font-size: 1.5rem;
-    color: #3B816F;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1.5rem;
-    flex: 1;
-}
-
-.name-cv {
-    width: 90%;
-}
-
-h1 {
-    margin: 0;
-    padding-bottom: 2rem;
-    font-size: 1.5rem;
-    color: #3B816F;
-    display: flex;
-}
-
-.cv {
-    text-align: center;
-}
-
-.cv-pdf:hover {
-    color: #A16812;
-}
-
-footer {
-    width: 100%;
-    margin: 0;
-    padding: 0.5rem 2rem 0.5rem;
-    background-color: #EAA743;
-    bottom: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer {
-    font-size: 1rem;
-    color: #244C46;
-}
-
-.media-links {
-    color: #244C46;
-    font-size: 2rem;
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
+.about-me #blurb {
+  width: 70%;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #3B816F;
 }
 
 @media only screen and (min-width: 1000px) {
-    .logo {
-        width: 45%;
-        margin: 0;
-    }
-    .logo-name-cv {
-        width: 90%;
-        margin: 2rem auto;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    .name-cv {
-        display: flex;
-        flex-direction: column;
-    }
+  .about-me {
+    width: 80%;
+    margin: 6.5rem auto 8.5rem;
+    display: grid;
+    grid-template-rows: 2fr 6fr;
+    grid-template-columns: 2fr 3fr;
+    gap: 1.5rem;
+  }
+  .about-me h1 {
+    margin: 0;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    align-self: end;
+  }
+  .about-me #profile-photo {
+    width: 80%;
+    grid-row: 1/3;
+    grid-column: 1/2;
+    place-self: start;
+  }
+  .about-me #blurb {
+    width: 80%;
+    margin: 0;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    place-self: center;
+    text-align: left;
+  }
+}
+.contact-container {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: #3B816F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+.contact-container .contact-info {
+  width: 75%;
+  margin: 0;
+  font-size: 1.5rem;
+}
+.contact-container .contact-info h1 {
+  width: 75%;
+  margin: 1.5rem 0;
+  font-size: 2rem;
+  text-align: center;
+}
+.contact-container .logo {
+  width: 100%;
+  margin: 1rem 0 3rem;
+}
+.contact-container .logo img {
+  width: 100%;
+  height: auto;
 }
 
-@media only screen and (min-width: 750px) {
-    .logo {
-        width: 45%;
-        margin: 0;
-    }
-    .logo-name-cv {
-        width: 90%;
-        margin: 4rem auto 5rem;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    .name-cv {
-        display: flex;
-        flex-direction: column;
-    }
+@media only screen and (min-width: 1000px) {
+  .contact-container {
+    width: 80%;
+    margin: 1.5rem auto;
+    flex-direction: row;
+    gap: 4rem;
+  }
+  .logo {
+    margin-top: 0;
+  }
 }
+@media only screen and (min-width: 1400px) {
+  .contact-container {
+    width: 90%;
+    padding-left: 4rem;
+    margin: 0 auto;
+    flex-direction: row;
+    gap: 4rem;
+  }
+  .contact-info {
+    padding-bottom: 3rem;
+  }
+}
+.portfolio {
+  margin-top: 1.5rem;
+  margin-bottom: 8rem;
+  color: #307865;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  flex: 1;
+}
+.portfolio h1 {
+  width: 75%;
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+  font-size: 2rem;
+  text-align: center;
+}
+.portfolio h1 h2 {
+  width: 75%;
+  margin: 0;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+.portfolio h1 .project-list {
+  width: 75%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.portfolio h1 .project-list .project-card {
+  border-bottom: 0.2rem solid #EAA743;
+}
+.portfolio h1 .project-list .project-card article {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.portfolio h1 .project-list .project-card article h3 {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+}
+.portfolio h1 .project-list .project-card article .project-image {
+  width: 100%;
+  height: auto;
+}
+.portfolio h1 .project-list .project-card article .project-links {
+  width: 100%;
+  color: #539382;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-self: center;
+  gap: 2rem;
+}
+.portfolio h1 .project-list .project-card article .project-links .project-link:hover {
+  color: #A16812;
+}
+.portfolio h1 .project-list .project-card article .project-description {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+@media only screen and (min-width: 1000px) {
+  .project-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .project-list .project-card {
+    width: 30%;
+  }
+}
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  font-family: "Roboto", "Helvetica", sans-serif;
+  color: #3B816F;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+body .nav-container {
+  width: 100%;
+  margin: 0;
+  padding: 2rem;
+  color: #3B816F;
+  text-decoration: none;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .nav-container nav {
+  width: 100%;
+}
+body .nav-container nav .menu-buttons {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+body .nav-container nav .menu-buttons .menu-item:hover {
+  color: #A16812;
+}
+body footer {
+  width: 100%;
+  margin: 0;
+  padding: 0.5rem 2rem 0.5rem;
+  background-color: #EAA743;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+body footer .footer {
+  font-size: 1rem;
+  color: #244C46;
+}
+body footer .footer .media-links {
+  color: #244C46;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+/*! normalize.scss v8.0.1 | MIT License | github.com/necolas/normalize.scss */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+.logo-name-cv {
+  margin: 1.5rem 0 5rem;
+  font-size: 1.5rem;
+  color: #3B816F;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  flex: 1;
+}
+.logo-name-cv .logo {
+  width: 90%;
+  margin: 5rem 0 5rem;
+}
+.logo-name-cv .logo .fade-in-image {
+  animation: fadeIn 11s;
+  transition-timing-function: cubic-bezier(0.42, 0, 1, 1);
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.logo-name-cv .logo .fade-in-image img {
+  width: 100%;
+  height: auto;
+}
+.logo-name-cv .name-cv h1 {
+  margin: 0;
+  padding-bottom: 2rem;
+  font-size: 1.5rem;
+  color: #3B816F;
+  display: flex;
+}
+.logo-name-cv .name-cv .cv {
+  text-align: center;
+}
+.logo-name-cv .name-cv .cv .fa-download .fa-solid.fa-download:hover {
+  color: #A16812;
+}
+@media only screen and (min-width: 1000px) {
+  .logo-name-cv {
+    width: 90%;
+    margin: 2rem auto;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .logo-name-cv .logo {
+    width: 45%;
+    margin: 0;
+  }
+  .logo-name-cv .name-cv {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 750px) {
+  .logo-name-cv {
+    width: 90%;
+    margin: 4rem auto 5rem;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .logo-name-cv .logo {
+    width: 45%;
+    margin: 0;
+  }
+  .logo-name-cv .name-cv {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
